Refine dragging interaction, fix minimap contrast, and perform DRY modal refactoring. Resolves #82, closes #52.

--- a/assets/app.css
+++ b/assets/app.css
@@ -554,6 +554,12 @@ video {
   display: none;
 }
 
+.app-is-dragging * {
+  -webkit-user-select: none !important;
+     -moz-user-select: none !important;
+          user-select: none !important;
+}
+
 html,
   body {
   min-height: 100%;
